# simple-shared-library

./: README.md
src/: CMakeLists.txt  main.cpp  shared_library.cpp  shared_library.hpp  static_library.cpp  static_library.hpp
